--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: url(https://wallup.net/wp-content/uploads/2018/10/05/54613-green-flying-birds-opera-web-browser-hummingbirds-opera.jpg);
+
+
 }
 
 code {
